--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -1,4 +1,105 @@
+<div>
+    <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
+    <div class="header">
+        <div>
+            <mat-form-field>
+                <mat-label>Search...</mat-label>
+                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
+            </mat-form-field>
+            <button color="primary" class="margin" mat-raised-button (click)="getItems()">
+                Search
+            </button>
 
-<h2>
-    CDF
-</h2>
+        </div>
+        <div>
+            <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
+            </mat-slide-toggle>
+        </div>
+    </div>
+    <br />
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
+
+            <ng-container matColumnDef="hashtag">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.hashtag}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="company">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.company }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.name }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="reference">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Reference </th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.reference }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="brands">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Brands </th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.brands }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="display_names">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Display Names</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.display_names }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="platforms">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Platforms</th>
+                <td mat-cell *matCellDef="let element">{{ element.platforms }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
+                <td mat-cell *matCellDef="let element">{{ element.address | currency: 'INR' }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="mobile">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile</th>
+                <td mat-cell *matCellDef="let element">{{ element.mobile | currency: 'INR' }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+                <td mat-cell *matCellDef="let element">{{ element.status | currency: 'INR' }}</td>
+            </ng-container>
+
+
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+        </table>
+
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        </mat-paginator>
+    </div>
+</div>
