--- a/frontend/src/app/layout/analysis/analysis.component.html
+++ b/frontend/src/app/layout/analysis/analysis.component.html
@@ -1,2 +1,83 @@
+<div>
+    <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
+    <div class="header">
+        <div>
+            <mat-form-field>
+                <mat-label>Search...</mat-label>
+                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
+            </mat-form-field>
+            <button color="primary" class="margin" mat-raised-button (click)="getItems()">
+                Search
+            </button>
 
-<h2>    Analysis  </h2>
+        </div>
+        <div>
+            <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
+            </mat-slide-toggle>
+        </div>
+    </div>
+    <br />
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
+
+            <ng-container matColumnDef="code">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.code}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="item_name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.item_name }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="thirty_days">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Last 30 Days</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.thirty_days }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="fifteen_days">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Last 15 Days </th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.fifteen_days }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="seven_days">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Last 7 Days </th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.seven_days }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="prediction_target">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Prediction/Target</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.prediction_target }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="actual_stock">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Actual Stock</th>
+                <td mat-cell *matCellDef="let element">{{ element.actual_stock }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="required">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>% Required</th>
+                <td mat-cell *matCellDef="let element">{{ element.required }}</td>
+            </ng-container>
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+        </table>
+
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        </mat-paginator>
+    </div>
+</div>
