--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -69,17 +69,17 @@
 
             <ng-container matColumnDef="address">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
-                <td mat-cell *matCellDef="let element">{{ element.address | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.address }}</td>
             </ng-container>
 
             <ng-container matColumnDef="mobile">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile</th>
-                <td mat-cell *matCellDef="let element">{{ element.mobile | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.mobile }}</td>
             </ng-container>
 
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-                <td mat-cell *matCellDef="let element">{{ element.status | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.status }}</td>
             </ng-container>
 
 
