--- a/frontend/src/app/layout/user/user.component.html
+++ b/frontend/src/app/layout/user/user.component.html
@@ -23,7 +23,8 @@
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="user_name" matSortDirection="asc">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="user_name"
+            matSortDirection="asc">
             <ng-container matColumnDef="user_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User Name</th>
                 <td mat-cell *matCellDef="let element">
@@ -60,10 +61,12 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewUser(element)">
+                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                        type="button" (click)="onEditNewUser(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to DeActive': 'Click to Active'}}" color="{{tableParams.active? 'warn': 'primary'}}" (click)="confirmDialog(element.id)">
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to DActive': 'Click to Active'}}"
+                        color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
                         <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
 
@@ -74,7 +77,8 @@
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
 
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
 </div>
