--- a/frontend/src/app/layout/suppliers/suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/suppliers.component.html
@@ -55,11 +55,11 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewSuppliers(element)">
+                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewSuppliers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
-                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to DActive': 'Click to Active'}}" color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                        <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
                 </td>
             </ng-container>
