--- a/frontend/src/app/layout/customers/add-customers/add-customers.component.html
+++ b/frontend/src/app/layout/customers/add-customers/add-customers.component.html
@@ -141,10 +141,12 @@
 
         <!-- button start -->
         <div class="btn-update">
-            <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
-                <span>
+            <button mat-raised-button color="primary" [disabled]="!formGroup.valid || isShowLoader" type="submit">
+                <span *ngIf="!isShowLoader">
+
                     {{ !this.data ? 'Save' : 'Update' }}
                 </span>
+                <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
             </button>
         </div>
     </form>
