--- a/frontend/src/app/layout/customers/tier/add-tier/add-tier.component.html
+++ b/frontend/src/app/layout/customers/tier/add-tier/add-tier.component.html
@@ -34,10 +34,11 @@
 
         <!-- button start -->
         <div class="btn-update">
-            <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
-                <span>
+            <button mat-raised-button color="primary" [disabled]="!formGroup.valid || isShowLoader" type="submit">
+                <span *ngIf="!isShowLoader">
                     {{ !this.data ? 'Save' : 'Update' }}
                 </span>
+                <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
             </button>
         </div>
     </form>
