--- a/frontend/src/app/layout/expense/cateogry/category.component.html
+++ b/frontend/src/app/layout/expense/cateogry/category.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h1 mat-dialog-title><b> Category</b></h1>
+    <h1 mat-dialog-title><b>Expense Category</b></h1>
 </div>
 <mat-divider></mat-divider>
 <br>
