--- a/frontend/src/app/layout/items/add-item/add-item.component.scss
+++ b/frontend/src/app/layout/items/add-item/add-item.component.scss
@@ -2,6 +2,12 @@
   mat-form-field {
     margin-right: 50px;
   }
+  .box{
+      display: flex;
+  }
+  .block{
+    display: table-caption;
+  }
 }
 
 .supplier_details_table {
