--- a/frontend/src/app/layout/items/add-item/add-item.component.html
+++ b/frontend/src/app/layout/items/add-item/add-item.component.html
@@ -187,7 +187,7 @@
         <div class="block">
             <mat-form-field>
                 <mat-label>Qty</mat-label>
-                <input matInput formControlName="supplier_qty" type="number" />
+                <input matInput formControlName="supplier_qty"[(ngModel)]="supplierQty" type="number" />
             </mat-form-field>
             <div>
                 <ng-container *ngIf="
@@ -202,7 +202,7 @@
         <div class="block">
             <mat-form-field class="input_width">
                 <mat-label>Rate</mat-label>
-                <input matInput formControlName="supplier_rate" type="number" />
+                <input matInput formControlName="supplier_rate" [(ngModel)]="supplierRate" type="number" />
             </mat-form-field>
             <div>
                 <ng-container *ngIf="
@@ -214,7 +214,7 @@
             </div>
         </div>
         <!-- ADD BUTTON -->
-        <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!formSupplier.valid"> Add
+        <button mat-raised-button color="primary" class="add_button"  type="submit" [disabled]="!formSupplier.valid" > Add
         </button>
     </div>
 </form>
@@ -243,7 +243,7 @@
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                    (click)="onEditNewCustomers(element)">
+                    (click)="getItemSupplier(element)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
                 <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
