--- a/frontend/src/app/layout/items/items.component.html
+++ b/frontend/src/app/layout/items/items.component.html
@@ -77,9 +77,9 @@
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="total">
+            <ng-container matColumnDef="total_balance">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
-                <td mat-cell *matCellDef="let element">{{ element.total | currency: 'INR' }}</td>
+                <td mat-cell *matCellDef="let element">{{ element.total_balance | currency: 'INR' }}</td>
             </ng-container>
 
 
